--- a/index.html
+++ b/index.html
@@ -49,10 +49,10 @@
       <h2>Connect With Me:</h2>
       <ol class="icon-margin">
         <li>
-          <img class="icon-margin" src="images/github.png" width="20px" alt="Github icon"/><a href="www.github.com/torellpernell">GitHub</a>
+          <img class="icon-margin" src="images/github.png" width="20px" alt="Github icon"/><a href="http://www.github.com/torellpernell">GitHub</a>
         </li>
         <li>
-          <img class="icon-margin" src="images/linkedin.png" width="20px" alt="Linkedin icon"/><a href="www.linkedin.com/in/torellpernell">LinkedIn</a>
+          <img class="icon-margin" src="images/linkedin.png" width="20px" alt="Linkedin icon"/><a href="http://www.linkedin.com/in/torellpernell">LinkedIn</a>
         </li>
         <li>
           <img class="icon-margin" src="images/yahoo.png" width="20px" alt="Yahoo icon"/><a href = "mailto: torellpernell@yahoo.com">Send an Email</a>
