--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
       <h2>Connect With Me:</h2>
       <ol class="icon-margin">
         <li>
-          <img class="icon-margin" src="images/github.png" width="20px" alt="Github icon"/><a href="http://www.github.com/torellpernell">GitHub</a>
+          <img class="icon-margin" src="images/github.png" width="20px" alt="Github icon"/><a href="http://www.github.com/torellpernell/Portfolio-Webpage">GitHub</a>
         </li>
         <li>
           <img class="icon-margin" src="images/linkedin.png" width="20px" alt="Linkedin icon"/><a href="http://www.linkedin.com/in/torellpernell">LinkedIn</a>
