--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 	<!--This is the beginning of my webpage-->
 	<header>
 		<h1>Torell T. Pernell<br><i>Software Engineer</i></h1>
-      <img class="photo-border" src="images/my-photo.jpg" width="300" alt="Photo of myself"/>
+      <img class="photo-border" src="images/professional pic 2.jpg" width="300" alt="Photo of myself"/>
     </header>
     
     <!--The main section with present descriptive details about me-->
